--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "release": "semantic-release",
     "bundle": "unbuild"
   },
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^16.4.5"
+  },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^12.0.0",
