--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,8 @@ on: push
 jobs:
   test-code:
     runs-on: ubuntu-latest
+    env:
+      NOTDIAMOND_API_KEY: ${{ secrets.NOTDIAMOND_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -17,3 +19,5 @@ jobs:
         run: yarn
       - name: Test
         run: yarn test
+        env:
+          NOTDIAMOND_API_KEY: ${{ secrets.NOTDIAMOND_API_KEY }}
