--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "typescript-swc-starter",
+  "name": "notdiamond",
   "type": "module",
   "version": "1.1.7",
-  "author": "maxgfr",
+  "author": "not-diamond",
   "license": "MIT",
-  "description": "A minimalist typescript swc starter",
+  "description": "TS/JS client for the NotDiamond API",
   "main": "./dist/index.cjs",
   "exports": {
     ".": {
@@ -15,12 +15,12 @@
   "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/maxgfr/typescript-swc-starter.git"
+    "url": "https://github.com/Not-Diamond/notdiamond-node.git"
   },
   "bugs": {
-    "url": "https://github.com/maxgfr/typescript-swc-starter/issues"
+    "url": "https://github.com/Not-Diamond/notdiamond-node/issues"
   },
-  "homepage": "https://github.com/maxgfr/typescript-swc-starter#readme",
+  "homepage": "https://github.com/Not-Diamond/notdiamond-node#readme",
   "files": [
     "dist"
   ],
