--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notdiamond",
   "type": "module",
-  "version": "0.3.7",
+  "version": "0.3.9",
   "author": "not-diamond",
   "license": "MIT",
   "description": "TS/JS client for the NotDiamond API",
@@ -57,7 +57,30 @@
     "bundle": "unbuild"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "@langchain/anthropic": "^0.3.1",
+    "@langchain/cohere": "^0.3.0",
+    "@langchain/community": "^0.3.3",
+    "@langchain/core": "^0.3.3",
+    "@langchain/google-genai": "^0.1.0",
+    "@langchain/mistralai": "^0.1.1",
+    "@langchain/openai": "^0.3.0",
+    "ansi-styles": "^6.2.1",
+    "axios": "^1.7.7",
+    "camelcase": "^8.0.0",
+    "decamelize": "^6.0.0",
+    "dotenv": "^16.4.5",
+    "eventemitter3": "^5.0.1",
+    "langchain": "^0.3.2",
+    "langsmith": "^0.1.60",
+    "p-finally": "^2.0.1",
+    "p-queue": "^8.0.1",
+    "p-retry": "^6.2.0",
+    "p-timeout": "^6.1.2",
+    "retry": "^0.13.1",
+    "semver": "^7.6.3",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
