--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "notdiamond",
+  "name": "notdiamond-continue",
   "type": "module",
-  "version": "0.3.9",
+  "version": "0.0.6",
   "author": "not-diamond",
   "license": "MIT",
-  "description": "TS/JS client for the NotDiamond API",
+  "description": "TS/JS client for Continue integration with NotDiamond API",
   "main": "./dist/index.cjs",
   "exports": {
     ".": {
@@ -58,7 +58,6 @@
   },
   "dependencies": {
     "@langchain/anthropic": "^0.3.1",
-    "@langchain/cohere": "^0.3.0",
     "@langchain/community": "^0.3.3",
     "@langchain/core": "^0.3.3",
     "@langchain/google-genai": "^0.1.0",
