--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'yarn'
+          cache: 'npm'
       - name: Install
-        run: yarn --frozen-lockfile
+        run: npm install
       - name: Build
-        run: yarn build
+        run: npm run build
       - name: Bundle
-        run: yarn bundle
+        run: npm run bundle
