--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,8 +12,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'yarn'
       - name: Install
-        run: yarn --frozen-lockfile
+        run: npm install
       - name: Lint
-        run: yarn lint
+        run: npm run lint
