--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'yarn'
       - name: Install
-        run: yarn
+        run: npm install
       - name: Test
-        run: yarn test
+        run: npm run test
         env:
           NOTDIAMOND_API_KEY: ${{ secrets.NOTDIAMOND_API_KEY }}
