--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,7 +12,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'yarn'
       - name: Install
-        run: npm install
+        run: yarn install
       - name: Lint
-        run: npm run lint
+        run: yarn lint
