--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,9 +19,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'yarn'
       - name: Install
-        run: npm install
+        run: yarn install
       - name: Bundle
-        run: npm run bundle
+        run: yarn bundle
       - name: Release
-        run: npm run release
+        run: yarn release
