--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'yarn'
       - name: Install
-        run: npm install
+        run: yarn install
       - name: Test
-        run: npm run test
+        run: yarn test
         env:
           NOTDIAMOND_API_KEY: ${{ secrets.NOTDIAMOND_API_KEY }}
