--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "decamelize": "^6.0.0",
     "dotenv": "^16.4.5",
     "eventemitter3": "^5.0.1",
+    "form-data": "^4.0.4",
     "langchain": "^0.3.2",
     "langsmith": "^0.1.60",
     "p-finally": "^2.0.1",
@@ -120,7 +121,8 @@
     "@octokit/request": "^9.2.1",
     "@octokit/plugin-paginate-rest": "^11.4.1",
     "@babel/helpers": "^7.26.10",
-    "esbuild": "^0.25.0"
+    "esbuild": "^0.25.0",
+    "form-data": "^4.0.4"
   },
   "engines": {
     "node": ">=20",
