--- a/package.json
+++ b/package.json
@@ -122,7 +122,8 @@
     "@octokit/plugin-paginate-rest": "^11.4.1",
     "@babel/helpers": "^7.26.10",
     "esbuild": "^0.25.0",
-    "form-data": "^4.0.4"
+    "form-data": "^4.0.4",
+    "glob": "^10.5.0"
   },
   "engines": {
     "node": ">=20",
