--- a/package.json
+++ b/package.json
@@ -123,7 +123,8 @@
     "@babel/helpers": "^7.26.10",
     "esbuild": "^0.25.0",
     "form-data": "^4.0.4",
-    "glob": "^10.5.0"
+    "glob": "^10.5.0",
+    "js-yaml": "4.1.1"
   },
   "engines": {
     "node": ">=20",
